# sniffit

./: .clang-format  .clangd  configure.ac  flake.nix
docs/: README.FIRST
src/: Makefile.am  sn_config.h  sn_conn_desc.c  sn_data.h  sn_generation.c  sn_interface.c  sn_interface.h  sn_packets.c  sn_structs.h  sniffit.c
